--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-*.class
+.class
+.project
+.classpath
+.factorypath
+.settings/
+*/.project
+tycho-maven-repository/
+*.log
+target/
+logs/
+bin/
 
-# Package Files #
-*.jar
-*.war
-*.ear
